crates/parser/src/snapshots/parser__tests__calls.snap
---
source: crates/parser/src/lib.rs
assertion_line: 1593
expression: module
---
Module {
    enables: [],
    requires: [],
    aliases: [],
    structs: [],
    consts: [],
    vars: [],
    functions: [
        FnDecl {
            attrs: [],
            name: "f",
            inputs: [
                FnInput {
                    attrs: [],
                    name: "x",
                    data_type: Scalar(
                        I32,
                    ),
                },
            ],
            output: None,
            body: [],
        },
        FnDecl {
            attrs: [],
            name: "g",
            inputs: [],
            output: Some(
                FnOutput {
                    attrs: [],
                    data_type: Scalar(
                        U32,
                    ),
                },
            ),
            body: [
                Return(
                    ReturnStatement {
                        value: Some(
                            ExprNode {
                                data_type: Scalar(
                                    U32,
                                ),
                                expr: Lit(
                                    U32(
                                        0,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
        FnDecl {
            attrs: [],
            name: "main",
            inputs: [],
            output: None,
            body: [
                FnCall(
                    FnCallStatement {
                        ident: "f",
                        args: [
                            ExprNode {
                                data_type: Scalar(
                                    I32,
                                ),
                                expr: Lit(
                                    I32(
                                        0,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
                LetDecl(
                    LetDeclStatement {
                        ident: "x",
                        data_type: None,
                        initializer: ExprNode {
                            data_type: Scalar(
                                U32,
                            ),
                            expr: BinOp(
                                BinOpExpr {
                                    op: Plus,
                                    left: ExprNode {
                                        data_type: Scalar(
                                            U32,
                                        ),
                                        expr: FnCall(
                                            FnCallExpr {
                                                ident: "g",
                                                template_args: [],
                                                args: [],
                                            },
                                        ),
                                    },
                                    right: ExprNode {
                                        data_type: Scalar(
                                            U32,
                                        ),
                                        expr: Lit(
                                            U32(
                                                1,
                                            ),
                                        ),
                                    },
                                },
                            ),
                        },
                    },
                ),
            ],
        },
    ],
}
