crates/parser/src/snapshots/parser__tests__floats.snap
---
source: crates/parser/src/lib.rs
assertion_line: 1594
expression: module
---
Module {
    enables: [],
    requires: [],
    aliases: [],
    structs: [],
    consts: [],
    overrides: [],
    vars: [],
    const_asserts: [],
    functions: [
        FnDecl {
            attrs: [],
            name: "main",
            inputs: [],
            output: None,
            body: [
                VarDecl(
                    VarDeclStatement {
                        ident: "x",
                        data_type: Some(
                            Scalar(
                                F32,
                            ),
                        ),
                        initializer: Some(
                            ExprNode {
                                data_type: Scalar(
                                    F32,
                                ),
                                expr: Lit(
                                    F32(
                                        0.0,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    123.456,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    123.0,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    0.123,
                                ),
                            ),
                        },
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        lhs: Expr(
                            LhsExprNode {
                                data_type: Ref(
                                    MemoryViewType {
                                        inner: Scalar(
                                            F32,
                                        ),
                                        storage_class: Function,
                                        access_mode: ReadWrite,
                                    },
                                ),
                                expr: Ident(
                                    "x",
                                ),
                            },
                        ),
                        op: Simple,
                        rhs: ExprNode {
                            data_type: Scalar(
                                F32,
                            ),
                            expr: Lit(
                                F32(
                                    -123.0,
                                ),
                            ),
                        },
                    },
                ),
            ],
        },
    ],
}
