crates/parser/src/snapshots/parser__tests__loops.snap
---
source: crates/parser/src/lib.rs
assertion_line: 1595
expression: module
---
Module {
    enables: [],
    requires: [],
    aliases: [],
    structs: [],
    consts: [],
    overrides: [],
    vars: [],
    const_asserts: [],
    functions: [
        FnDecl {
            attrs: [],
            name: "main",
            inputs: [],
            output: None,
            body: [
                Loop(
                    LoopStatement {
                        body: [
                            VarDecl(
                                VarDeclStatement {
                                    ident: "x",
                                    data_type: None,
                                    initializer: Some(
                                        ExprNode {
                                            data_type: Scalar(
                                                I32,
                                            ),
                                            expr: Lit(
                                                I32(
                                                    0,
                                                ),
                                            ),
                                        },
                                    ),
                                },
                            ),
                            Break,
                        ],
                        continuing: None,
                    },
                ),
            ],
        },
    ],
}
