crates/parser/src/snapshots/parser__tests__structs.snap
---
source: crates/parser/src/lib.rs
assertion_line: 1597
expression: module
---
Module {
    enables: [],
    requires: [],
    aliases: [],
    structs: [
        StructDecl {
            name: "MyStruct",
            members: [
                StructMember {
                    attrs: [],
                    name: "field",
                    data_type: Scalar(
                        U32,
                    ),
                },
            ],
            accessors: {
                Scalar(
                    U32,
                ): [
                    StructMember {
                        attrs: [],
                        name: "field",
                        data_type: Scalar(
                            U32,
                        ),
                    },
                ],
            },
        },
        StructDecl {
            name: "Struct2",
            members: [
                StructMember {
                    attrs: [],
                    name: "field",
                    data_type: Scalar(
                        I32,
                    ),
                },
            ],
            accessors: {
                Scalar(
                    I32,
                ): [
                    StructMember {
                        attrs: [],
                        name: "field",
                        data_type: Scalar(
                            I32,
                        ),
                    },
                ],
            },
        },
    ],
    consts: [],
    const_asserts: [],
    overrides: [],
    vars: [],
    functions: [],
}
